--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,10 @@
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.sleepycat</groupId>
+          <artifactId>je</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
